feat(security): enhance security headers in SecurityConfig